# cpp-validator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  depends.cmake
docs/: builtin_operators.md  index.md  mainpage.md
examples/: CMakeLists.txt  example01_validate.cpp  example02_validate_with_report.cpp  example03_validate_with_exception.cpp  example04_apply_validator.cpp  example05_dynamic_validator._allocation.cpp  example05_dynamic_validator_allocation.cpp  example06_nested_validators.cpp  example07_nested_members.cpp  example08_member_existence.cpp  example09_custom_property.cpp  example10_custom_property_flag.cpp  example11_heterogeneous_property_implicit.cpp  example12_heterogeneous_property_explicit.cpp  example13_variadic_property.cpp  example14_variadic_property_aggregation.cpp  example15_operator_in.cpp  example16_operator_negation.cpp  example17_custom_operator.cpp  example18_move_copy.cpp  example19_lazy_operands.cpp  example20_operand_other_member.cpp  example21_operand_sample_object.cpp  example22_element_aggregation.cpp  example23_tree_validation.cpp  example24_partial_validation.cpp  example25_validate_evaluation_result.cpp  example26_prevalidate_set_member.cpp  example27_prevalidate_set_custom_property.cpp
include/dracosha/validator/: adapter.hpp  adjust_storable_type.hpp  apply.hpp  apply_generated_paths.hpp  apply_generated_paths.ipp  apply_member_path.hpp  apply_member_path.ipp  base_validator.hpp  basic_property.hpp  can_check_contains.hpp  can_get.hpp  check_contains.hpp  check_exists.hpp  check_member.hpp  check_member_exists_traits_proxy.hpp  check_member_path.hpp  clear_validated.hpp  compact_variadic_property.hpp  config.hpp  contains.hpp  cref.hpp  dispatcher.hpp  embedded_object.hpp  error.hpp  extract.hpp  filter_member.hpp  filter_member.ipp  filter_path.hpp  flag_presets.hpp  generate_paths.hpp  get.hpp  get_member.hpp  heterogeneous_property.hpp  ignore_compiler_warnings.hpp  impl.hpp  interval.hpp  invoke_member_if_exists.hpp  lazy.hpp  make_member.hpp  make_types_tuple.hpp  (+37 more)
include/dracosha/validator/adapters/: adapter.hpp  adapter_traits_wrapper.hpp  adapter_with_aggregation_iterator.hpp  chained_adapter.hpp  default_adapter.hpp  make_intermediate_adapter.hpp  prevalidation_adapter.hpp  reporting_adapter.hpp  single_member_adapter.hpp
include/dracosha/validator/aggregation/: aggregation.hpp  aggregation.ipp  all.hpp  and.hpp  any.hpp  element_aggregation.hpp  element_aggregation.ipp  not.hpp  or.hpp  tree.hpp  wrap_heterogeneous_index.hpp  wrap_index.hpp  wrap_it.hpp
include/dracosha/validator/detail/: adapter_helper.hpp  aggregate_all.hpp  aggregate_and.hpp  aggregate_any.hpp  aggregate_or.hpp  backend_formatter_helper.hpp  check_has_method.hpp  default_adapter_impl.hpp  default_adapter_impl.ipp  dispatcher_impl.hpp  extract_cref.hpp  extract_ref.hpp  format_operand.hpp  format_value.hpp  formatter_fmt.hpp  formatter_std.hpp  get_impl.hpp  has_method.hpp  has_property.hpp  hint_helper.hpp  if_bool.hpp  logical_not.hpp  member_helper.hpp  member_helper.ipp  member_names_traits.hpp  reorder_and_present.hpp  reorder_strings.hpp  reporting_adapter_impl.hpp  single_member_adapter_impl.hpp  string_view.hpp  take_address_of.hpp  to_string.hpp  validator_impl.hpp
include/dracosha/validator/operators/: aggregation.hpp  aggregation.ipp  all.hpp  and.hpp  any.hpp  comparison.hpp  contains.hpp  element_aggregation.hpp  element_aggregation.ipp  exists.hpp  flag.hpp  in.hpp  invert_op.hpp  lex_in.hpp  lexicographical.hpp  logical.hpp  not.hpp  number_patterns.hpp  op_report_without_operand.hpp  operator.hpp  or.hpp  regex.hpp  string_patterns.hpp  wrap_op.hpp
include/dracosha/validator/prevalidation/: clear_validated.hpp  prevalidation_adapter.hpp  prevalidation_adapter_impl.hpp  prevalidation_adapter_tag.hpp  resize_validated.hpp  set_validated.hpp  strict_any.hpp  true_if_empty.hpp  true_if_size.hpp  unset_validated.hpp  validate_empty.hpp  validate_value.hpp
include/dracosha/validator/properties/: empty.hpp  h_size.hpp  length.hpp  pair.hpp  size.hpp  value.hpp
include/dracosha/validator/reporting/: aggregation_strings.hpp  backend_formatter.hpp  concrete_phrase.hpp  decorator.hpp  extend_translator.hpp  flag_presets.hpp  format_bool_operand.hpp  format_join_grammar_cats.hpp  format_member.hpp  format_operand.hpp  formatter.hpp  strings.hpp  (+28 more)
include/hatn/validator/: adapter.hpp  apply.hpp  apply_generated_paths.hpp  apply_generated_paths.ipp  apply_member_path.hpp  apply_member_path.ipp  base_validator.hpp  basic_property.hpp  can_check_contains.hpp  can_get.hpp  check_contains.hpp  check_exists.hpp  check_member.hpp  check_member_exists_traits_proxy.hpp  check_member_path.hpp  compact_variadic_property.hpp  config.hpp  dispatcher.hpp  embedded_object.hpp  error.hpp  extract.hpp  filter_member.hpp  filter_path.hpp  generate_paths.hpp  get.hpp  get_member.hpp  heterogeneous_property.hpp  ignore_compiler_warnings.hpp  interval.hpp  invoke_member_if_exists.hpp  lazy.hpp  make_member.hpp  make_validator.hpp  master_sample.hpp  member.hpp  member_path.hpp  member_property.hpp  member_with_name.hpp  member_with_name_list.hpp  operand.hpp  (+17 more)
sample-build/: linux-clang.sh  msvc.bat  readme.txt  win-msvc.bat
test/: CMakeLists.txt  dev.cpp  main.cpp  test.cmake  testallanyreport.cpp  testclearvalidated.cpp  testfmtformatter.cpp  testformatter.cpp  testformatter.ipp  testhabrexamples_ru.cpp  testheterogeneouscontainers.cpp  testinvokeandor.cpp  testlexicographical.cpp  testnestedallany.cpp  testnestedvalidators.cpp  testnomemberreporting.cpp  testoperatorexists.cpp  testoperatorin.cpp  testpartialpaths.cpp  testpointers.cpp  testprevalidation.cpp  testregex.cpp  testreporter.cpp  testreporting.cpp  testreportinghints.cpp  testresizevalidated.cpp  testsetvalidated.cpp  testsinglemember.cpp  teststdformatter.cpp  teststrings.cpp  teststrnumbers.cpp  testtranslator.cpp  testtranslator_ru.cpp  testtree.cpp  testunsetvalidated.cpp  testvalidate.cpp  testvalidator.cpp  testvalidatorimpl.cpp  testvalidatoronheap.cpp  testvaluetransformer.cpp  (+1 more)
(+172 files in other folders)
